--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&family=Montserrat:wght@300;400;500;600;700&family=Poppins:wght@300;500;600;700&family=Roboto:wght@300;400;700;900&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
 
